--- a/index-3.html
+++ b/index-3.html
@@ -98,7 +98,7 @@
                                             <li class="active menu-item-has-children"><a href="#">Home</a>
                                                 <ul class="sub-menu">
                                                     <li><a href="index.html">Home One</a></li>
-                                                    <li><a href="index-2.html">Home Two</a></li>
+                                                    <li><a href="index.html">Home Two</a></li>
                                                     <li class="active"><a href="index-3.html">Home Three</a></li>
                                                 </ul>
                                             </li>
